Vulkan: Zoom out when snapping cursor #130588
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#130588
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 11
Graphics card: Nvidia 4090
Blender Version
Broken: 4.3
Worked: OpenGL backend
Short description of error
When I'm clicking shift+RMB 3d cursor snaps Instead snaps to geometry snaps to empty space in front of the object.when view locked is turn on to 3d cursor it starts to zoom out when I'm reportedly click shift+RMB
Exact steps for others to reproduce the error
here is little video
https://gyazo.com/5793ad5877ff7e9c3397a2d3f598284d
Hi, thanks for the report. I'm unable to confirm this. Does it work after factory reset?:
File > Defaults > Load Factory Settings
I load factory settings still have this bug. Both with mouse and tablet clicking
Actually, I can confirm with Vulkan backend. cc @Jeroen-Bakker
blender 4.3 3d cursor snapping to void not to geometryto Vulkan: Zoom out when snapping cursorCould be related that we temporarily disabled GPU depth picking for the vulkan backend. Does it have the same behavior as when GPU depth picking is disabled in OpenGL? If so it would be solved when #127768 is solved.
If not the case than this is something different that requires more investigation
Works with/without "GPU Depth Picking" in OpenGL backend
When performing this action I see that it tries to read the depth from a depth stencil buffer into a float. This seems to be a data conversion that isn't supported and the functionality will read uninitialized memory.
The fix is to add support for reading depth from depth stencil textures. Related files are
vk_data_conversion.cc
andconstexpr inline bool validate_data_format(eGPUTextureFormat tex_format, eGPUDataFormat data_format)