Fix #130588: Vulkan: Depth stencil readback

Functionality like snapping cursor requires readback of depth stencil
textures. This was not supported yet. This PR will add readback of depth
stencil textures to float.

**TODO**
- [x] Add support for D24S8 (NVIDIA)
- [ ] Add support for D32S8 (AMD/Intel)
- [ ] Enable test cases in texture_test.cc